Gradle should be working

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'application'
 
+import org.gradle.internal.os.OperatingSystem;
+
 sourceCompatibility = 1.7
 version = '1.0'
 compileJava.options.encoding = 'UTF-8'
@@ -40,13 +42,13 @@ sourceSets {
 }
 repositories {
     mavenCentral()
-    if (runningOnWindows) {
+    if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
         flatDir {
             dirs System.getenv('EV3_HOME') + '/lib/ev3'
         }
     } else {
         flatDir {
-            dirs 
+            dirs '/Users/michael/bin/leJOS_EV3_0.9.1-beta' + '/lib/ev3'
         }
     }
 }
