--- a/build.gradle
+++ b/build.gradle
@@ -78,16 +78,16 @@ test {
     systemProperties 'property': 'value'
 }
 
-task deployEV3 << {
-    ant.taskdef(name: 'scp', classname: 'org.apache.tools.ant.taskdefs.optional.ssh.Scp', classpath: configurations.sshAntTask.asPath)
-    ant.scp(todir: ev3_username+'@'+ev3_server+':/home/lejos/programs',
-            password: ev3_password,
-            verbose: 'true') {
-        fileset(dir: './build/libs') {
-            include(name: '**/*.jar')
-        }
-    }
-}
+//task deployEV3 << {
+//    ant.taskdef(name: 'scp', classname: 'org.apache.tools.ant.taskdefs.optional.ssh.Scp', classpath: configurations.sshAntTask.asPath)
+//    ant.scp(todir: ev3_username+'@'+ev3_server+':/home/lejos/programs',
+//            password: ev3_password,
+//            verbose: 'true') {
+//        fileset(dir: './build/libs') {
+//            include(name: '**/*.jar')
+//        }
+//    }
+//}
 
 task deployEV3Gradle << {
     ssh.run {
