--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ sourceSets {
 }
 repositories {
     mavenCentral()
-    if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
+    if (OperatingSystem.current().isWindows()) {
         flatDir {
             dirs System.getenv('EV3_HOME') + '/lib/ev3'
         }
