Updated bulid.gradle to better represent class project

--- a/build.gradle
+++ b/build.gradle
@@ -73,20 +73,26 @@ test {
     systemProperties 'property': 'value'
 }
 
-task deployEV3 << {
-    ant.taskdef(name: 'scp', classname: 'org.apache.tools.ant.taskdefs.optional.ssh.Scp', classpath: configurations.sshAntTask.asPath)
-    ant.scp(todir: ev3_username+'@'+ev3_server+':/home/lejos/programs',
-            password: ev3_password,
-            verbose: 'true') {
-        fileset(dir: './build/libs') {
-            include(name: '**/*.jar')
-        }
-    }
-}
+//task deployEV3 << {
+//    ant.taskdef(name: 'scp', classname: 'org.apache.tools.ant.taskdefs.optional.ssh.Scp', classpath: configurations.sshAntTask.asPath)
+//    ant.scp(todir: ev3_username+'@'+ev3_server+':/home/lejos/programs',
+//            password: ev3_password,
+//            verbose: 'true') {
+//        fileset(dir: './build/libs') {
+//            include(name: '**/*.jar')
+//        }
+//    }
+//}
 
 remotes {
-    webServer {
+    ev3_1 {
         host = '192.168.0.10'
+        user = 'root'
+        password = 'root'
+    }
+
+    ev3_2 {
+        host = '192.168.0.11'
         user = 'root'
         password = 'root'
     }
@@ -94,7 +100,7 @@ remotes {
 
 task deployEV3Gradle << {
     ssh.run {
-        session(remotes.webServer) {
+        session(remotes.ev3_1) {
             put from: './build/libs', into: '/home/lejos/programs'
         }
     }
