--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ configurations {
 
 remotes {
     ev3_1 {
-        role = ev3
+        role 'ev3'
         host = '192.168.0.10'
         user = 'root'
 //        password = 'root'
@@ -44,7 +44,7 @@ remotes {
     }
 
     ev3_2 {
-        role = ev3
+        role 'ev3'
         host = '192.168.0.11'
         user = 'root'
 //        password = 'root'
@@ -95,9 +95,7 @@ test {
 
 task deployEV3 << {
     ssh.run {
-        session(remotes.ev3_2) {
-            execute 'touch /home/lejos/programs/AI-Robot-2016S-CSIT441-1.0.jar'
-//            execute 'rm /home/lejos/programs/AI-Robot-2016S-CSIT441-1.0.jar'
+        session(remotes.ev3_1) {
             put from: 'build/libs/*.jar', into: '/home/lejos/programs/AI-Robot-2016S-CSIT441-1.0.jar'
         }
     }
