--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ repositories {
     mavenCentral()
     if (OperatingSystem.current().isWindows()) {
         flatDir {
-            dirs System.getenv('EV3_HOME') + '/lib/ev3'
+            dirs System.getenv("EV3_HOME") + '/lib/ev3'
         }
     } else {
         flatDir {
