--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'org.hidetake.ssh'
 
+sourceCompatibility = 1.7
 version = '1.0'
 compileJava.options.encoding = 'UTF-8'
 mainClassName = 'Main'
